--- a/DataAnalysis/001_numpy.ipynb
+++ b/DataAnalysis/001_numpy.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0e24837a",
    "metadata": {},
    "outputs": [
@@ -318,8 +318,182 @@
    "execution_count": null,
    "id": "74f04a15",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0.]\n",
+      "[0. 0. 0.]\n",
+      "\n",
+      "[ 0  4  8 12 16 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 종합 실습 (Leader)\n",
+    "# 1.\n",
+    "a1= np.arange(25).reshape(5,5)\n",
+    "print(a1[2])\n",
+    "print(a1[:,2])\n",
+    "\n",
+    "# 2.\n",
+    "import random\n",
+    "a2 = np.random.randint(0,100, (10,10))\n",
+    "print()\n",
+    "print(a2[::2])\n",
+    "\n",
+    "# 3.\n",
+    "a3 = np.arange(50).reshape(5,10)\n",
+    "print(a3[1:4, 2:7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b6d93d89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "주대각선:\n",
+      " [np.int32(6), np.int32(2), np.int32(4), np.int32(2)]\n",
+      "부대각선:\n",
+      " [np.int32(7), np.int32(7), np.int32(4), np.int32(7)]\n",
+      "\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4.\n",
+    "a4 = np.random.randint(0,10,(4,4))\n",
+    "answer = []\n",
+    "answer2 = []\n",
+    "for i in range(4):\n",
+    "    answer.append(a4[i][i])\n",
+    "    answer2.append(a4[i][3-i])\n",
+    "print(\"주대각선:\\n\", answer)\n",
+    "print(\"부대각선:\\n\", answer2)\n",
+    "print()\n",
+    "\n",
+    "# 5.\n",
+    "a5 = np.random.randint(0,10,(3,4,5))\n",
+    "print(a5[1,0,-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8bf49ef8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[35 36 37 38]\n",
+      " [39 40 41 42]\n",
+      " [43 44 45 46]\n",
+      " [47 48 49 50]\n",
+      " [51 52 53 54]\n",
+      " [55 56 57 58]\n",
+      " [59 60 61 62]\n",
+      " [63 64 65 66]\n",
+      " [67 68 69 70]\n",
+      " [71 72 73 74]]\n",
+      "[[71 72 73 74]\n",
+      " [67 68 69 70]\n",
+      " [63 64 65 66]\n",
+      " [59 60 61 62]\n",
+      " [55 56 57 58]\n",
+      " [51 52 53 54]\n",
+      " [47 48 49 50]\n",
+      " [43 44 45 46]\n",
+      " [39 40 41 42]\n",
+      " [35 36 37 38]]\n",
+      "[[41 42]\n",
+      " [45 46]\n",
+      " [49 50]\n",
+      " [53 54]\n",
+      " [57 58]\n",
+      " [61 62]\n",
+      " [65 66]\n",
+      " [69 70]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6.\n",
+    "a6 = np.arange(35,75).reshape(10,4)\n",
+    "print(a6)\n",
+    "\n",
+    "# 7.\n",
+    "a7 = a6[::-1]\n",
+    "print(a7)\n",
+    "\n",
+    "# 8.\n",
+    "a8 = a6[1:-1,2:]\n",
+    "print(a8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d2bff2d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16 10  6 20 26 28 30 12 38 14 42 16]\n",
+      "[[ 0  1  2  3  4  5  6  7  8  9]\n",
+      " [10 11 12 13 14 15 16 17 18 19]\n",
+      " [20 21 22 23 24 25 26 27 28 29]\n",
+      " [30 31 32 33 34 35 36 37 38 39]\n",
+      " [40 41 42 43 44 45 46 47 48 49]\n",
+      " [50 51 52 53 54 55 56 57 58 59]\n",
+      " [60 61 62 63 64 65 66 67 68 69]\n",
+      " [70 71 72 73 74 75 76 77 78 79]\n",
+      " [80 81 82 83 84 85 86 87 88 89]\n",
+      " [90 91 92 93 94 95 96 97 98 99]]\n",
+      "[[12 14 16]\n",
+      " [32 34 36]\n",
+      " [52 54 56]]\n",
+      "[1 1 9 7 6 1 6 9]\n",
+      "[False False  True  True  True False  True  True]\n",
+      "[9 7 6 6 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9.\n",
+    "a9 = np.random.randint(1,51,(5,6))\n",
+    "mask = a9 % 2 == 0\n",
+    "a9_as = a9[mask]\n",
+    "print(a9_as)\n",
+    "\n",
+    "# 10. \n",
+    "a10 = np.arange(100).reshape(10,10)\n",
+    "# selcted_row = arr[[1,3,5]] 도 가능하다\n",
+    "print(a10)\n",
+    "\n",
+    "\n",
+    "a10_as = a10[[1,3,5]][:,[2,4,6]]\n",
+    "print(a10_as)\n",
+    "\n",
+    "# 11.\n",
+    "a11 = np.random.randint(0,10,15)\n",
+    "even_idx_value = a11[::2]\n",
+    "print(even_idx_value)\n",
+    "mask = even_idx_value >= 5\n",
+    "print(mask)\n",
+    "all = even_idx_value[mask]\n",
+    "print(all)"
+   ]
   }
  ],
  "metadata": {
