NumPy 최종, Pandas시작

--- a/DataAnalysis/01_01_practice.ipynb
+++ b/DataAnalysis/01_01_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "27c2317f",
    "metadata": {},
    "outputs": [
@@ -117,11 +117,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c256b86e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "행 단위 누적 합:\n",
+      " [[ 1  3  6]\n",
+      " [ 4  9 15]]\n",
+      "열 단위 누적 합:\n",
+      " [[1 2 3]\n",
+      " [5 7 9]]\n",
+      "행 단위 누적 곱:\n",
+      " [[  1   2   6]\n",
+      " [  4  20 120]]\n",
+      "열 단위 누적 곱:\n",
+      " [[ 1  2  3]\n",
+      " [ 4 10 18]]\n",
+      "[70 74 75 78 29 87 26 75 77 18]\n",
+      "[70 74 75 78 50 87 50 75 77 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1, 2, 3],\n",
+    "                [4, 5, 6]])\n",
+    "as6 = np.cumsum(arr, axis=1)\n",
+    "as6_1 = np.cumsum(arr, axis=0)\n",
+    "as6_2 = np.cumprod(arr, axis=1)\n",
+    "as6_3 = np.cumprod(arr, axis=0)\n",
+    "print(\"행 단위 누적 합:\\n\", as6)\n",
+    "print(\"열 단위 누적 합:\\n\", as6_1)\n",
+    "print(\"행 단위 누적 곱:\\n\", as6_2)\n",
+    "print(\"열 단위 누적 곱:\\n\", as6_3)\n",
+    "\n",
+    "\n",
+    "arr8 = np.random.randint(0,101,size = 10)\n",
+    "print(arr8)\n",
+    "print(np.where(arr8 >= 50, arr8, 50))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d2227891",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['C' 'B' 'A']\n",
+      " ['C' 'A' 'C']\n",
+      " ['B' 'B' 'A']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr9 = np.array([[5,50,95],\n",
+    "                 [20,75,10],\n",
+    "                 [60,30,85]])\n",
+    "result = np.where(arr9 >= 70, \"A\",\n",
+    "                  np.where(arr9 >= 30, \"B\", \"C\"))\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
