--- a/DataAnalysis/001_numpy.ipynb
+++ b/DataAnalysis/001_numpy.ipynb
@@ -494,6 +494,27 @@
     "all = even_idx_value[mask]\n",
     "print(all)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5374c928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습 2(Leader)\n",
+    "# 6.\n",
+    "arr = np.array([[1, 2, 3],\n",
+    "                [4, 5, 6]])\n",
+    "as6 = np.cumsum(arr, axis=1)\n",
+    "as6_1 = np.cumsum(arr, axis=0)\n",
+    "as6_2 = np.cumprod(arr, axis=1)\n",
+    "as6_3 = np.cumprod(arr, axis=0)\n",
+    "print(\"행 단위 누적 합:\\n\", as6)\n",
+    "print(\"열 단위 누적 합:\\n\", as6_1)\n",
+    "print(\"행 단위 누적 곱:\\n\", as6_2)\n",
+    "print(\"열 단위 누적 곱:\\n\", as6_3)"
+   ]
   }
  ],
  "metadata": {
