--- a/DataAnalysis/03_numpy.ipynb
+++ b/DataAnalysis/03_numpy.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b5b12a93",
    "metadata": {},
    "outputs": [],
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "754a3971",
    "metadata": {},
    "outputs": [
@@ -659,12 +659,170 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81f14092",
+   "metadata": {},
+   "source": [
+    "### 3-3. 배열의 정렬"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d56fd450",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n",
+      "[3 1 4 2]\n",
+      "[1 2 3 4]\n",
+      "[4 3 2 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# np.sort(array)\n",
+    "# 정렬된 복사본 반환\n",
+    "# array.sort()\n",
+    "# 원본 배열을 정렬\n",
+    "\n",
+    "# 1차원 배열\n",
+    "a = np.array([3,1,4,2])\n",
+    "\n",
+    "# 정렬한 배열을 반환\n",
+    "s = np.sort(a)\n",
+    "print(s)\n",
+    "print(a)\n",
+    "\n",
+    "# 원본을 정렬\n",
+    "a.sort()\n",
+    "print(a)\n",
+    "\n",
+    "# 내림차순: sort한 후 배열을 뒤집어야 함\n",
+    "print(a[::-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4aa85d5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 1 2]\n",
+      " [6 5 4]]\n",
+      "[[4 5 6]\n",
+      " [1 2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2차원 배열 정렬\n",
+    "a = ([6,5,4],[3,1,2])\n",
+    "s1 = np.sort(a, axis=0)\n",
+    "print(s1)\n",
+    "s2 = np.sort(a, axis=1)\n",
+    "print(s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2a6f6320",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3 0 4 1]\n",
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# np.argsort()\n",
+    "# - 정렬 인덱스를 반환\n",
+    "\n",
+    "a = np.array([3,5,1,2,4])\n",
+    "idx = np.argsort(a)\n",
+    "print(idx)\n",
+    "print(a[idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "343a43b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오름차순: [2 4 5 7 9]\n",
+      "내림차순: [9 7 5 4 2]\n",
+      "\n",
+      "[[2 5 9]\n",
+      " [1 3 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실습 3\n",
+    "# 1.\n",
+    "arr = np.array([7,2,9,4,5])\n",
+    "an1 = np.sort(arr)\n",
+    "print(\"오름차순:\", an1)\n",
+    "print(\"내림차순:\", an1[::-1])\n",
+    "print()\n",
+    "#2.\n",
+    "arr = np.array([[9,2,5],\n",
+    "                [3,8,1]])\n",
+    "an2 = np.sort(arr, axis=1)\n",
+    "print(an2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d356bc5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정렬 인덱스: [3 1 2 4 0]\n",
+      "정렬 결과: [ 1  3  7  9 10]\n",
+      "\n",
+      "[[4 1 2]\n",
+      " [6 7 3]\n",
+      " [9 8 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3.\n",
+    "arr = np.array([10,3,7,1,9])\n",
+    "a3_idx = np.argsort(arr)\n",
+    "an3 = arr[a3_idx]\n",
+    "print(\"정렬 인덱스:\", a3_idx)\n",
+    "print(\"정렬 결과:\", an3)\n",
+    "print()\n",
+    "# 4.\n",
+    "arr = np.array([[4,7,2],\n",
+    "                [9,1,5],\n",
+    "                [6,8,3]])\n",
+    "an6 = np.sort(arr, axis=0)\n",
+    "print(an6)"
+   ]
   }
  ],
  "metadata": {
